[gd_scene load_steps=10 format=3 uid="uid://d25g2nw03mmdi"]

[ext_resource type="Script" path="res://scripts/game/dice/die.gd" id="1_spk2b"]
[ext_resource type="PackedScene" uid="uid://b7x3ka2rwdola" path="res://scenes/game/dice/dice_normal.tscn" id="3_nd3gk"]
[ext_resource type="Script" path="res://scripts/material_highlighter.gd" id="4_7sy51"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hovkk"]
resource_name = "Material.002"
cull_mode = 2
albedo_color = Color(0.906332, 0.906332, 0.906332, 1)
roughness = 0.4

[sub_resource type="ArrayMesh" id="ArrayMesh_0psux"]
resource_name = "test_die_d4_Cone_002"
_surfaces = [{
"aabb": AABB(-0.866025, -0.314333, -0.75, 1.73206, 0.942999, 1.25001),
"attribute_data": PackedByteArray(52, 117, 183, 222, 52, 245, 183, 222, 52, 117, 183, 222, 202, 10, 183, 222, 202, 10, 183, 222, 202, 138, 183, 222, 153, 218, 163, 176, 154, 90, 163, 176, 255, 63, 71, 161, 255, 63, 71, 161, 154, 90, 91, 207, 154, 90, 91, 207, 255, 63, 183, 222, 255, 191, 183, 222, 101, 37, 91, 207, 101, 37, 91, 207, 101, 37, 163, 176, 100, 165, 163, 176, 231, 231, 173, 199, 231, 103, 173, 199, 255, 63, 163, 176, 255, 63, 163, 176, 255, 63, 163, 176, 231, 103, 9, 215, 231, 103, 9, 215, 101, 37, 183, 222, 100, 165, 183, 222, 23, 24, 9, 215, 23, 24, 9, 215, 178, 50, 153, 153, 178, 50, 153, 153, 177, 178, 153, 153, 76, 205, 153, 153, 77, 77, 153, 153, 255, 63, 234, 145, 255, 63, 234, 145, 77, 77, 173, 199, 77, 77, 173, 199, 77, 77, 173, 199, 154, 90, 183, 222, 153, 218, 183, 222, 178, 50, 173, 199, 178, 50, 173, 199, 178, 50, 173, 199, 23, 24, 173, 199, 23, 152, 173, 199, 178, 50, 245, 168, 101, 37, 255, 191, 178, 50, 81, 184, 178, 50, 9, 215, 77, 77, 9, 215, 255, 63, 91, 207, 177, 178, 173, 199, 255, 191, 163, 176, 76, 205, 173, 199, 154, 90, 255, 191, 77, 77, 245, 168, 77, 77, 81, 184),
"format": 34896613399,
"index_count": 174,
"index_data": PackedByteArray(0, 0, 39, 0, 23, 0, 3, 0, 44, 0, 27, 0, 16, 0, 30, 0, 46, 0, 16, 0, 46, 0, 47, 0, 14, 0, 48, 0, 41, 0, 12, 0, 25, 0, 49, 0, 12, 0, 49, 0, 50, 0, 10, 0, 51, 0, 36, 0, 17, 0, 45, 0, 52, 0, 17, 0, 52, 0, 53, 0, 6, 0, 54, 0, 18, 0, 7, 0, 19, 0, 55, 0, 7, 0, 55, 0, 56, 0, 9, 0, 57, 0, 22, 0, 57, 0, 11, 0, 37, 0, 57, 0, 38, 0, 22, 0, 55, 0, 11, 0, 57, 0, 55, 0, 57, 0, 56, 0, 56, 0, 57, 0, 9, 0, 19, 0, 2, 0, 24, 0, 19, 0, 24, 0, 55, 0, 55, 0, 24, 0, 11, 0, 54, 0, 13, 0, 40, 0, 54, 0, 40, 0, 18, 0, 18, 0, 40, 0, 1, 0, 52, 0, 13, 0, 54, 0, 52, 0, 54, 0, 53, 0, 53, 0, 54, 0, 6, 0, 45, 0, 5, 0, 26, 0, 45, 0, 26, 0, 52, 0, 52, 0, 26, 0, 13, 0, 51, 0, 15, 0, 43, 0, 51, 0, 42, 0, 36, 0, 49, 0, 15, 0, 51, 0, 49, 0, 51, 0, 50, 0, 50, 0, 51, 0, 10, 0, 25, 0, 4, 0, 28, 0, 25, 0, 28, 0, 49, 0, 49, 0, 28, 0, 15, 0, 48, 0, 8, 0, 21, 0, 48, 0, 20, 0, 41, 0, 46, 0, 8, 0, 48, 0, 46, 0, 48, 0, 47, 0, 47, 0, 48, 0, 14, 0, 29, 0, 34, 0, 46, 0, 46, 0, 34, 0, 8, 0, 44, 0, 16, 0, 47, 0, 44, 0, 47, 0, 27, 0, 27, 0, 47, 0, 14, 0, 39, 0, 12, 0, 50, 0, 39, 0, 50, 0, 23, 0, 23, 0, 50, 0, 10, 0, 31, 0, 17, 0, 53, 0, 31, 0, 53, 0, 32, 0, 32, 0, 53, 0, 6, 0, 33, 0, 7, 0, 56, 0, 33, 0, 56, 0, 35, 0, 35, 0, 56, 0, 9, 0),
"lods": [0.000414962, PackedByteArray(0, 0, 25, 0, 10, 0, 25, 0, 28, 0, 10, 0, 25, 0, 4, 0, 28, 0, 10, 0, 28, 0, 42, 0, 10, 0, 42, 0, 36, 0, 3, 0, 16, 0, 27, 0, 16, 0, 20, 0, 27, 0, 27, 0, 20, 0, 41, 0, 16, 0, 29, 0, 20, 0, 29, 0, 34, 0, 20, 0, 20, 0, 34, 0, 8, 0, 22, 0, 11, 0, 37, 0, 9, 0, 11, 0, 22, 0, 7, 0, 11, 0, 9, 0, 7, 0, 2, 0, 11, 0, 33, 0, 7, 0, 9, 0, 33, 0, 9, 0, 35, 0, 6, 0, 26, 0, 1, 0, 17, 0, 26, 0, 6, 0, 17, 0, 5, 0, 26, 0, 32, 0, 17, 0, 6, 0, 31, 0, 17, 0, 32, 0)],
"material": SubResource("StandardMaterial3D_hovkk"),
"name": "Material.002",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 58,
"vertex_data": PackedByteArray(254, 255, 0, 0, 254, 255, 107, 143, 254, 255, 0, 0, 254, 255, 255, 63, 254, 255, 0, 0, 254, 255, 70, 219, 0, 0, 0, 0, 254, 255, 70, 219, 0, 0, 0, 0, 254, 255, 107, 143, 0, 0, 0, 0, 254, 255, 255, 63, 254, 191, 0, 0, 101, 102, 255, 63, 254, 191, 0, 0, 101, 102, 70, 219, 255, 127, 170, 170, 50, 51, 70, 219, 255, 127, 170, 170, 50, 51, 70, 219, 254, 191, 169, 170, 203, 204, 107, 143, 254, 191, 169, 170, 203, 204, 70, 219, 255, 127, 0, 0, 254, 255, 107, 143, 255, 127, 0, 0, 254, 255, 255, 63, 255, 63, 169, 170, 203, 204, 70, 219, 255, 63, 169, 170, 203, 204, 107, 143, 255, 63, 0, 0, 101, 102, 70, 219, 255, 63, 0, 0, 101, 102, 255, 63, 254, 223, 0, 0, 50, 179, 255, 63, 254, 223, 0, 0, 50, 179, 70, 219, 255, 127, 255, 255, 101, 102, 70, 219, 255, 127, 255, 255, 101, 102, 70, 219, 255, 127, 255, 255, 101, 102, 70, 219, 254, 223, 84, 85, 101, 230, 107, 143, 254, 223, 84, 85, 101, 230, 70, 219, 255, 63, 0, 0, 254, 255, 107, 143, 255, 63, 0, 0, 254, 255, 255, 63, 255, 31, 84, 85, 101, 230, 70, 219, 255, 31, 84, 85, 101, 230, 107, 143, 255, 95, 0, 0, 153, 25, 70, 219, 255, 95, 0, 0, 153, 25, 70, 219, 255, 95, 0, 0, 153, 25, 255, 63, 255, 159, 0, 0, 153, 25, 255, 63, 255, 159, 0, 0, 153, 25, 70, 219, 255, 127, 85, 85, 0, 0, 70, 219, 255, 127, 85, 85, 0, 0, 70, 219, 255, 159, 254, 255, 50, 179, 107, 143, 255, 159, 254, 255, 50, 179, 70, 219, 255, 159, 254, 255, 50, 179, 70, 219, 254, 191, 0, 0, 254, 255, 107, 143, 254, 191, 0, 0, 254, 255, 255, 63, 255, 95, 254, 255, 50, 179, 70, 219, 255, 95, 254, 255, 50, 179, 107, 143, 255, 95, 254, 255, 50, 179, 107, 143, 255, 31, 0, 0, 50, 179, 70, 219, 255, 31, 0, 0, 50, 179, 255, 63, 255, 95, 85, 85, 204, 76, 70, 219, 255, 63, 84, 85, 152, 153, 70, 219, 255, 95, 170, 170, 255, 127, 70, 219, 255, 95, 84, 85, 101, 230, 107, 143, 255, 159, 84, 85, 101, 230, 107, 143, 255, 127, 169, 170, 203, 204, 107, 143, 255, 95, 0, 0, 50, 179, 255, 63, 255, 127, 0, 0, 101, 102, 255, 63, 255, 159, 0, 0, 50, 179, 255, 63, 254, 191, 84, 85, 152, 153, 70, 219, 255, 159, 85, 85, 204, 76, 70, 219, 255, 159, 170, 170, 255, 127, 70, 219, 254, 255, 255, 127, 0, 0, 255, 127, 22, 191, 139, 87, 139, 215, 232, 192, 254, 255, 255, 127, 0, 0, 255, 127, 0, 0, 255, 127, 22, 191, 139, 87, 139, 215, 232, 192, 22, 191, 139, 87, 254, 255, 255, 127, 22, 191, 139, 87, 254, 255, 255, 127, 0, 0, 255, 127, 139, 215, 232, 192, 254, 255, 255, 127, 139, 215, 232, 192, 0, 0, 255, 127, 0, 0, 255, 127, 22, 191, 139, 87, 139, 215, 232, 192, 139, 215, 232, 192, 22, 191, 139, 87, 254, 255, 255, 127, 22, 191, 139, 87, 254, 255, 255, 127, 0, 0, 255, 127, 139, 215, 232, 192, 254, 255, 255, 127, 139, 215, 232, 192, 139, 215, 232, 192, 0, 0, 255, 127, 0, 0, 255, 127, 22, 191, 139, 87, 139, 215, 232, 192, 22, 191, 139, 87, 254, 255, 255, 127, 22, 191, 139, 87, 22, 191, 139, 87, 254, 255, 255, 127, 0, 0, 255, 127, 139, 215, 232, 192, 254, 255, 255, 127, 254, 255, 255, 127, 139, 215, 232, 192, 0, 0, 255, 127, 139, 215, 232, 192, 139, 215, 232, 192, 139, 215, 232, 192, 255, 255, 255, 127, 254, 255, 255, 127, 255, 255, 255, 127, 0, 0, 255, 127, 0, 0, 255, 127, 0, 0, 255, 127, 22, 191, 139, 87, 22, 191, 139, 87, 22, 191, 139, 87)
}]
blend_shape_mode = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jdsyw"]
resource_name = "Material.003"
cull_mode = 2
albedo_color = Color(0, 0, 0, 1)
roughness = 0.5

[sub_resource type="ArrayMesh" id="ArrayMesh_k6tfd"]
resource_name = "test_die_d4_Cone_003"
_surfaces = [{
"aabb": AABB(-0.216506, -0.314333, -1, 0.433013, 1.25733, 1.125),
"attribute_data": PackedByteArray(255, 63, 142, 130, 255, 191, 142, 130, 255, 63, 142, 130, 255, 63, 255, 191, 255, 63, 255, 191, 255, 63, 255, 191, 255, 63, 163, 176, 255, 63, 163, 176, 178, 50, 153, 153, 177, 178, 153, 153, 76, 205, 153, 153, 77, 77, 153, 153, 255, 63, 234, 145, 255, 63, 234, 145, 77, 77, 173, 199, 77, 77, 173, 199, 178, 50, 173, 199, 178, 50, 173, 199),
"format": 34896613399,
"index_count": 18,
"index_data": PackedByteArray(2, 0, 11, 0, 13, 0, 1, 0, 9, 0, 10, 0, 7, 0, 15, 0, 5, 0, 14, 0, 17, 0, 4, 0, 16, 0, 6, 0, 3, 0, 8, 0, 0, 0, 12, 0),
"material": SubResource("StandardMaterial3D_jdsyw"),
"name": "Material.003",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 18,
"vertex_data": PackedByteArray(255, 127, 0, 0, 0, 0, 70, 219, 255, 127, 0, 0, 0, 0, 255, 63, 255, 127, 0, 0, 0, 0, 70, 219, 255, 127, 255, 255, 141, 227, 70, 219, 255, 127, 255, 255, 141, 227, 107, 143, 255, 127, 255, 255, 141, 227, 70, 219, 255, 127, 255, 191, 170, 170, 70, 219, 255, 127, 255, 191, 170, 170, 70, 219, 0, 0, 0, 0, 85, 85, 70, 219, 0, 0, 0, 0, 85, 85, 255, 63, 255, 255, 0, 0, 85, 85, 255, 63, 255, 255, 0, 0, 85, 85, 70, 219, 255, 127, 255, 63, 227, 56, 70, 219, 255, 127, 255, 63, 227, 56, 70, 219, 255, 255, 255, 191, 255, 255, 107, 143, 255, 255, 255, 191, 255, 255, 70, 219, 0, 0, 255, 191, 255, 255, 70, 219, 0, 0, 255, 191, 255, 255, 107, 143, 139, 215, 232, 192, 0, 0, 255, 127, 22, 191, 139, 87, 139, 215, 232, 192, 254, 255, 255, 127, 22, 191, 139, 87, 139, 215, 232, 192, 22, 191, 139, 87, 139, 215, 232, 192, 0, 0, 255, 127, 0, 0, 255, 127, 22, 191, 139, 87, 139, 215, 232, 192, 22, 191, 139, 87, 254, 255, 255, 127, 22, 191, 139, 87, 139, 215, 232, 192, 254, 255, 255, 127)
}]
blend_shape_mode = 0

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_xnfvc"]
points = PackedVector3Array(0, -1, -1, -0.864103, -1, 0.499182, 0.864519, -1, 0.499182, 0, 0.412, -0.004)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eqfn5"]
render_priority = 1
albedo_color = Color(0.380392, 0.639216, 0.333333, 1)

[node name="D4" type="RigidBody3D"]
mass = 2.0
gravity_scale = 3.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, -0.15, 0)
continuous_cd = true
max_contacts_reported = 10
contact_monitor = true
script = ExtResource("1_spk2b")
_throwing_force_magnitude = 14.0
_throwing_angular_velocity = 0.0
_throwing_force_direction_range_x = Vector2(0, -1)
_throwing_force_direction_range_z = Vector2(-0.5, 0.5)
_mass_on_ground_multiplier = 10.0

[node name="test_die_d4" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.445, 0)

[node name="Dice_001" type="MeshInstance3D" parent="test_die_d4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.685667, 0)
mesh = SubResource("ArrayMesh_0psux")
skeleton = NodePath("")

[node name="Dice2_001" type="MeshInstance3D" parent="test_die_d4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.685667, 0)
mesh = SubResource("ArrayMesh_k6tfd")
skeleton = NodePath("")

[node name="Raycasts" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00605106, -0.226553, 0)

[node name="DiceRaycast1" parent="Raycasts" instance=ExtResource("3_nd3gk")]
target_position = Vector3(0, -1, 0)
opposite_side_value = 1

[node name="DiceRaycast2" parent="Raycasts" instance=ExtResource("3_nd3gk")]
transform = Transform3D(-0.241594, 0.809894, 0.534513, -0.0234063, -0.555533, 0.831165, 0.970095, 0.188293, 0.15317, 0, 0, 0)
target_position = Vector3(0, -1, 0)

[node name="DiceRaycast3" parent="Raycasts" instance=ExtResource("3_nd3gk")]
transform = Transform3D(-0.3665, -0.830192, -0.420069, -6.81723e-08, -0.451484, 0.892279, -0.930418, 0.32702, 0.165469, 0, 0, 0)
target_position = Vector3(0, -1, 0)

[node name="DiceRaycast4" parent="Raycasts" instance=ExtResource("3_nd3gk")]
transform = Transform3D(0.995737, 0.00991924, 0.0917004, -0.079273, -0.416195, 0.905813, 0.0471502, -0.909221, -0.413634, 0, 0, 0)
target_position = Vector3(0, -1, 0)
opposite_side_value = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, -1.49012e-08, 2.23517e-08, 1.49012e-08, 1, 1.58819e-22, -2.23517e-08, 3.33067e-16, 1, -7.45058e-09, 0.445, -1.49012e-08)
shape = SubResource("ConvexPolygonShape3D_xnfvc")

[node name="MaterialHighlighter" type="Node" parent="." node_paths=PackedStringArray("mesh_to_highlight")]
script = ExtResource("4_7sy51")
highlight_material = SubResource("StandardMaterial3D_eqfn5")
mesh_to_highlight = NodePath("../test_die_d4/Dice_001")

[node name="RollTimeoutTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="sleeping_state_changed" from="." to="." method="_on_movement_stopped"]
[connection signal="timeout" from="RollTimeoutTimer" to="." method="_on_movement_stopped"]
